--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
             <div id="resizeControls" class="hidden">
                 <button id="resizeConfirm">✔</button>
                 <button id="resizeCancel">✖</button>
+
+                <div id="resizeScrollerWrapper">
+                    <input type="range" id="resizeScroller" min="0.1" max="2" step="0.1" value="1">
+                </div>
+                <div id="resizeMoveControls">
+                    <button id="moveUp" class="move-button">↑</button>
+                    <button id="moveDown" class="move-button">↓</button>
+                    <button id="moveLeft" class="move-button">←</button>
+                    <button id="moveRight" class="move-button">→</button>
+                </div>
             </div>
         </div>
         
