--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
             </div>
 
             <div>
+                <button id="presetButton">Fac</button>
                 <button id="saveImage">Sav</button>
                 <button id="resizeImage">Res</button>
+                <button id="toggleButton">Off</button>
             </div>
 
             <div id="resizeControls" class="hidden">
