--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
 
             <div>
-                <button id="presetButton">Fac</button>
+                <button id="presetButton">Fac⁰</button>
                 <button id="saveImage">Sav</button>
                 <button id="resizeImage">Res</button>
                 <button id="toggleButton">Off</button>
