--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
         <div id="layerPopup" class="layer-popup hidden">
             <ul id="layerList"></ul>
         </div>
+        <div class="footer">
+            <p>Создано для <span>xZwitter</span></p>
+            <p>Посмотреть итоги можно <a href="https://linkwhorter.github.io/Tabbed-Names-eatoges/">здесь</a>.</p>
+        </div>
     </div>
-    
     <script src="scriptes.js"></script>
 </body>
 </html>
