[Tms] Results of totem-game;

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <div class="footer">
             <p>Создано для <span>xZwitter</span></p>
-            <p>Посмотреть итоги можно <a href="https://linkwhorter.github.io/Tabbed-Names-eatoges/">здесь</a>.</p>
+            <p>Посмотреть итоги можно <a href="https://linkwhorter.github.io/Tabbed-Names/res/">здесь</a>.</p>
         </div>
     </div>
     <script src="scriptes.js"></script>
